[package]
name = "aoc-cli"
version = "0.1.0"
authors = ["Jack Huang <jackhxs@gmail.com>"]
edition = "2021"
description = "A command line interface for executing Advent of Code solutions."

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
aoc-plumbing = { path = "../aoc-plumbing" }
anyhow = { workspace = true }
clap = { version = "4", features = ["cargo", "env", "derive", "wrap_help"] }
clap_complete = "4"
serde = { workspace = true }
serde_json = { workspace = true }
historian-hysteria = { path = "../day-001-historian-hysteria" }
red-nosed-reports = { path = "../day-002-red-nosed-reports" }
mull-it-over = { path = "../day-003-mull-it-over" }
ceres-search = { path = "../day-004-ceres-search" }
print-queue = { path = "../day-005-print-queue" }
guard-gallivant = { path = "../day-006-guard-gallivant" }
bridge-repair = { path = "../day-007-bridge-repair" }
resonant-collinearity = { path = "../day-008-resonant-collinearity" }
disk-fragmenter = { path = "../day-009-disk-fragmenter" }
hoof-it = { path = "../day-010-hoof-it" }
plutonian-pebbles = { path = "../day-011-plutonian-pebbles" }
garden-groups = { path = "../day-012-garden-groups" }
claw-contraption = { path = "../day-013-claw-contraption" }
restroom-redoubt = { path = "../day-014-restroom-redoubt" }
warehouse-woes = { path = "../day-015-warehouse-woes" }
reindeer-maze = { path = "../day-016-reindeer-maze" }
chronospatial-computer = { path = "../day-017-chronospatial-computer" }
ram-run = { path = "../day-018-ram-run" }
